@@ -4,7 +4,8 @@ django-profile Changelog
 
 Development version
 -------------------
-
+* Avatar crop bug finally solved. Thanks to stephane.angel:
+	http://code.google.com/p/django-profile/issues/detail?id=52
 * Added the French translation. Thanks so much to stephane.angel:
 	http://code.google.com/p/django-profile/issues/detail?id=50
 * Added and aditional check to the code to make sure that this bug doesn't happen:
